--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "asynckit",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Minimal async jobs utility library",
   "main": "index.js",
   "scripts": {
     "clean": "rimraf coverage",
     "lint": "eslint *.js test/*.js",
-    "test": "istanbul cover --reporter=json tape -- 'test/test-*.js' | tap-spec",
+    "test": "nyc --reporter=json tape -- 'test/test-*.js' | tap-spec",
     "browser": "browserify -t browserify-istanbul test/test-*.js | obake --coverage | tap-spec",
     "report": "istanbul report",
     "size": "browserify index.js | size-table asynckit",
@@ -45,6 +45,7 @@
     "coveralls": "^2.11.9",
     "eslint": "^2.9.0",
     "istanbul": "^0.4.3",
+    "nyc": "^6.4.4",
     "obake": "^0.1.2",
     "phantomjs-prebuilt": "^2.1.7",
     "pre-commit": "^1.1.3",
@@ -53,5 +54,6 @@
     "size-table": "^0.2.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.5.1"
-  }
+  },
+  "dependencies": {}
 }
