--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "clean": "rimraf coverage",
     "lint": "eslint *.js test/*.js",
-    "test": "nyc --reporter=json tape -- 'test/*.js' | tap-spec",
+    "test": "istanbul cover --reporter=json tape -- 'test/*.js' | tap-spec",
+    "win-test": "tape 'test/*.js' | tap-spec",
     "browser": "browserify -t browserify-istanbul test/test-*.js | obake --coverage | tap-spec",
     "report": "istanbul report",
     "size": "browserify index.js | size-table asynckit",
@@ -45,7 +46,6 @@
     "coveralls": "^2.11.9",
     "eslint": "^2.9.0",
     "istanbul": "^0.4.3",
-    "nyc": "^6.4.4",
     "obake": "^0.1.2",
     "phantomjs-prebuilt": "^2.1.7",
     "pre-commit": "^1.1.3",
