--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "no-redeclare": [2, { "builtinGlobals": true }],
     "no-shadow": [2, { "builtinGlobals": true, "hoist": "all" }],
     "no-use-before-define": [2, "nofunc"],
+    "no-sparse-arrays": 2,
     "no-shadow-restricted-names": 2,
     "no-extra-semi": 2,
     "no-unused-vars": 2,
