--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf coverage",
     "lint": "eslint *.js test/*.js",
     "test": "istanbul cover --reporter=json tape -- 'test/*.js' | tap-spec",
-    "win-test": "tape 'test/*.js' | tap-spec",
+    "win-test": "tape test/*.js",
     "browser": "browserify -t browserify-istanbul test/test-*.js | obake --coverage | tap-spec",
     "report": "istanbul report",
     "size": "browserify index.js | size-table asynckit",
